# gitmate

./: README.md
backend/: README.md  instructions.md  main.py  pyproject.toml  server.py  tree-sitter-docs.md
backend/gitmate/: __init__.py  chat.py  config.py  llm.py  lsp_client.py  models.py  parsers.py  repo.py  vectorstore.py
frontend/: instructions.md  middleware.ts  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  page.tsx
frontend/app/dashboard/: layout.tsx  page.tsx
frontend/app/dashboard/project/[id]/: page.tsx
frontend/app/dashboard/project/[id]/chart/: page.tsx
frontend/app/dashboard/project/[id]/chat/: page.tsx
frontend/components/dashboard/: header.tsx  sidebar.tsx
frontend/lib/: api.ts  auth.ts  prisma.ts
frontend/prisma/: schema.prisma
frontend/types/: index.ts
